Bug 137294 - Special Character dialog -- Search operation not updated according to the active font name entry
Summary: Special Character dialog -- Search operation not updated according to the act...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.1.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords:
Depends on:
Blocks: Special-Character
  Show dependency treegraph
 
Reported: 2020-10-06 14:41 UTC by ricky.tigg
Modified: 2020-10-20 10:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Window | Special character (12.35 KB, image/png)
2020-10-06 14:43 UTC, ricky.tigg
Details
Version information (12.96 KB, image/png)
2020-10-06 14:44 UTC, ricky.tigg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ricky.tigg 2020-10-06 14:41:40 UTC
Description:
Hey. Search tool applying to special characters does not update its searches while selecting new font name entries. I cannot remember if the tool has ever operated by updating that field in releases from version 6.

Steps to Reproduce:
1. Enter "check mark" into the search field;
2. Move to Font field with tabulator, which leads to list Font's first entry Abyssinica SIL;
3. Press down-arrow as many times as needed to reach font entry DejaVu Sans. See Writer_7.0.1.2_Special_characters_search.png;
4. Inspect the Font field state by clicking that field's down-arrow;
5. Press Enter.

Actual Results:
2. As intended there is no target listed for that font.
3. Unexpectedly there is no target listed for that font.
4. Font DejaVu Sans is indeed selected and active there, which is indicated by the blue code color as text background.
5. At last the Font field gets updated since a target is exhibited.

Expected Results:
Search operation to be updated according to the active Font name entry.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Help - About LibreOffice can no more be copied. See Writer_7.0.1.2_About_version_information.png
Comment 1 ricky.tigg 2020-10-06 14:43:34 UTC
Created attachment 166127 [details]
Window | Special character
Comment 2 ricky.tigg 2020-10-06 14:44:34 UTC
Created attachment 166128 [details]
Version information
Comment 3 V Stuart Foote 2020-10-06 20:12:32 UTC
Confirmed. Recent masters and 7.0.1.2 release builds.
Comment 4 Caolán McNamara 2020-10-14 15:38:03 UTC
If I first change to "DejaVu Sans", then type "check mark" I see that the "subset" is grayed out

If I first type "check mark", I see that "subset" is grayed out for the current font, but when I change the font to "DejaVu Sans" it is ungrayed again.

That seems to be at least part of the problem.
Comment 5 Commit Notification 2020-10-14 18:26:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d7ff5df1dc5c7ae0f468e0250c54e9f72035093c

tdf#137294 don't change subset sensitivity after setting search mode

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-10-16 09:05:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/252cf479c483022505efc2641b64fa7cfde385b1

tdf#137294 don't change subset sensitivity after setting search mode

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 ricky.tigg 2020-10-16 09:58:11 UTC
Could be tested as soon as next Appimage is released.
Comment 9 Caolán McNamara 2020-10-20 10:17:25 UTC
ok, I'll close this then. I was waiting until https://gerrit.libreoffice.org/c/core/+/104301 was also in 7-0 because that improves some related aspects of the combobox