tdf#137294 don't change subset sensitivity after setting search mode

Change-Id: Iaa76e2bc8029ac8f8a52b0c45f74b57395090088
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104312
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>